--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
   },
   "dependencies": {
     "@inkline/inkline": "^4.2.1",
-    "vue": "^3.2.45"
+    "vue": "^3.2.45",
+    "markdown-it": "^13.0.2",
+    "vue-markdown-render": "^2.1.1",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@inkline/config": "^1.9.1",
     "@inkline/plugin": "^1.5.2",
     "@types/markdown-it": "^13.0.7",
     "@vitejs/plugin-vue": "^4.0.0",
-    "markdown-it": "^13.0.2",
     "sass": "^1.64.0",
-    "vite": "^4.0.0",
-    "vue-markdown-render": "^2.1.1",
-    "vue-router": "^4.2.5"
+    "vite": "^4.0.0"
   }
 }
